<resources>
    <string name="app_name">Bhavishya Vaani</string>
    <string name="load_chart">Load Chart</string>
    <string name="know_more">Know more</string>
    <string name="birth_chart_generator">Birth Chart Generator</string>
    <string name="birth_date">Birth Date</string>
    <string name="download_chart">Download Chart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="health">Health</string>
    <string name="submit">Submit</string>
    <string name="predictions_emoji">The Predictions 🔮</string>
    <string name="description">Description:</string>
    <string name="lorem_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue, orci quis mollis tincidunt, nunc sem euismod leo, et aliquam eros magna eget ligula. Etiam cursus enim sem. Quisque vitae nunc vitae metus eleifend cursus eget non ex. Nulla ac tortor id tellus malesuada vestibulum. Cras eleifend tincidunt justo sed vehicula. In mattis augue quis semper fringilla. Vivamus condimentum rutrum porttitor. Proin eleifend, magna nec condimentum fermentum, justo libero ullamcorper orci, mollis aliquet felis nunc in nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed rutrum dignissim metus sit amet blandit. Curabitur in sapien at mi cursus dapibus. Nunc tempus elementum ante id pharetra. Nam in velit scelerisque, vehicula quam ut, cursus leo. Mauris mattis efficitur volutpat.</string>
    <string name="suitable_fields">Suitable Fields:</string>
    <string name="strengths">Strengths:</string>
    <string name="challenges">Challenges:</string>
    <string name="success_strategies">Success Strategies:</string>
    <string name="solutions">Solutions:</string>
    <string name="sorry_currently_we_are_out_of_service">Sorry, Currently we are out of service!!</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="birth_time">Birth Time</string>
    <string name="English">English</string>
    <string name="Bengali">বাংলা</string>
</resources>