<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="200dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/neutral_dark_gray"
                android:fontFamily="@font/afr"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:text="@string/predictions_emoji"
                android:textColor="@color/neutral_white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingTop="34dp"
                android:letterSpacing="0.03"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfairdisplay"
                android:gravity="start"
                android:paddingVertical="6dp"
                android:paddingHorizontal="10dp"
                tools:text="Sample title with some basic Info of Ayan Malik"
                android:textColor="@color/secondary_blue"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/tv_desc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:fontFamily="@font/playfairdisplay"
                android:textColor="@color/black"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/lorem_para"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="12dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:textColor="@color/background_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_label" />
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="80dp"
                android:background="@color/secondary_blue"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <TextView
                android:id="@+id/tv_fields_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/playfairdisplay"
                android:textStyle="bold"
                android:text="@string/suitable_fields"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />
            <TextView
                android:id="@+id/tv_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="12dp"
                tools:text="@string/lorem_para"
                android:textSize="16sp"
                android:textColor="@color/background_color"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_fields_label" />
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="24sp"
                android:background="@color/secondary_blue"
                app:layout_constraintTop_toBottomOf="@+id/tv_fields" />


            <TextView
                android:id="@+id/tv_strengths_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/playfairdisplay"
                android:textStyle="bold"
                android:text="@string/strengths"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />
            <TextView
                android:id="@+id/tv_strengths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="12dp"
                tools:text="@string/lorem_para"
                android:textSize="16sp"
                android:textColor="@color/background_color"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_strengths_label" />
            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="24sp"
                android:background="@color/secondary_blue"
                app:layout_constraintTop_toBottomOf="@+id/tv_strengths" />

            <TextView
                android:id="@+id/tv_challenges_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/playfairdisplay"
                android:textStyle="bold"                android:text="@string/challenges"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />
            <TextView
                android:id="@+id/tv_challenges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="12dp"
                tools:text="@string/lorem_para"
                android:textSize="16sp"
                android:textColor="@color/background_color"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_label" />
            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="24sp"
                android:background="@color/secondary_blue"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges" />

            <TextView
                android:id="@+id/tv_solutions_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/playfairdisplay"
                android:textStyle="bold"
                android:text="@string/solutions"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />
            <TextView
                android:id="@+id/tv_solutions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="12dp"
                tools:text="@string/lorem_para"
                android:textSize="16sp"
                android:textColor="@color/background_color"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_solutions_label" />
            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="24sp"
                android:background="@color/secondary_blue"
                app:layout_constraintTop_toBottomOf="@+id/tv_solutions" />

            <TextView
                android:id="@+id/tv_successStrategies_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/playfairdisplay"
                android:textStyle="bold"
                android:text="@string/success_strategies"
                android:textColor="@color/secondary_blue"
                android:textSize="16sp"
                android:layout_marginTop="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />
            <TextView
                android:id="@+id/tv_successStrategies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="12dp"
                tools:text="@string/lorem_para"
                android:textSize="16sp"
                android:textColor="@color/background_color"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_successStrategies_label" />
            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="24sp"
                android:background="@color/secondary_blue"
                app:layout_constraintTop_toBottomOf="@+id/tv_successStrategies" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/astro_loading"/>


</androidx.constraintlayout.widget.ConstraintLayout>