<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/secondary_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ui1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birth_chart_generator"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="45dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/primary_blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/chartImageView"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="32dp"
                    android:background="#8FFFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <Button
                    android:id="@+id/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/know_more"
                    android:backgroundTint="@color/time_color"
                    android:padding="15dp"
                    app:cornerRadius="8dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chartImageView" />

                <ProgressBar
                    android:id="@+id/pBar"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:outlineSpotShadowColor="#EAB30D"
                    app:layout_constraintBottom_toBottomOf="@+id/chartImageView"
                    app:layout_constraintEnd_toEndOf="@+id/chartImageView"
                    app:layout_constraintStart_toStartOf="@+id/chartImageView"
                    app:layout_constraintTop_toTopOf="@+id/chartImageView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_regions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp"
                    android:visibility="visible"
                    tools:listitem="@layout/item_region"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chartImageView"
                    tools:itemCount="1" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#EAB30D"
                    android:src="@drawable/ic_download"
                    app:layout_constraintBottom_toBottomOf="@+id/chartImageView"
                    app:layout_constraintEnd_toEndOf="@+id/chartImageView"
                    android:contentDescription="@string/download_chart" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvPredictions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@color/hint_color"
                    android:clipToPadding="false"
                    android:paddingHorizontal="4dp"
                    android:paddingVertical="4dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rcv_regions"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_prediction" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/ui2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="72dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="12dp"
            android:background="@drawable/rounded_edittext"
            android:hint="Name"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/white"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:inputType="text" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextName"
            android:layout_margin="16dp"
            android:padding="12dp"
            android:drawableStart="@drawable/baseline_transgender_24"
            android:drawablePadding="8dp"
            android:background="@drawable/rounded_spinner"
            android:entries="@array/gender_options" />

        <TextView
            android:id="@+id/textViewBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerGender"
            android:layout_margin="25dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/time_color"
            android:text="@string/birth_date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewBirthDate"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:padding="15dp"
            app:cornerRadius="8dp"
            app:backgroundTint="#EAB30D"
            android:textColor="@color/white"
            android:text="Select Date" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSelectDate"
            android:layout_margin="25dp"
            android:textSize="17sp"
            android:textColor="@color/time_color"
            android:textStyle="bold"
            android:text="Birth Time" />

        <Button
            android:id="@+id/buttonSelectTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTime"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:padding="15dp"
            app:backgroundTint="#EAB30D"
            app:cornerRadius="8dp"
            android:textColor="@color/white"
            android:text="Select Time" />

        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSelectTime"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="25dp"
            android:padding="12dp"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/white"
            android:hint="Location"
            android:drawableStart="@drawable/baseline_location_on_24"
            android:drawablePadding="8dp"
            android:textColorHint="@color/hint_color"
            android:inputType="text" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextLocation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            app:backgroundTint="#EAB30D"
            app:cornerRadius="8dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:text="@string/submit" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>